<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context="io.fruitful.linhhc.dorsal.ui.activity.LoginActivity"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_weight="12"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:layout_marginTop="60dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo_app" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_version"
                android:contentDescription="@string/number_vesion" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_email"
                android:contentDescription="@string/ic_email" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:hint="@string/your_email"
                android:textColorHint="@color/divider"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:layout_marginRight="20dp"
                android:id="@+id/et_email"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="20dp">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_lock"
                android:contentDescription="@string/ic_lock" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:hint="@string/your_password"
                android:background="@android:color/transparent"
                android:textColorHint="@color/divider"
                android:gravity="center"
                android:layout_marginRight="20dp"
                android:id="@+id/et_password" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="40dp">

        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_bg"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:text="@string/log_in"
            android:layout_marginBottom="20dp"
            android:id="@+id/btn_login" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/accent"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:text="@string/fb_login"
            android:layout_marginBottom="20dp"
            android:id="@+id/btn_loginFb" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/primary_text"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:id="@+id/tv_forgotPassword" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/button_bg"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:id="@+id/btn_signUp" />



    </LinearLayout>


</ScrollView>
